lots of changes with updating dependencies and converting to new package layout