@@ -1,4 +1,5 @@
 apply plugin: 'com.squareup.wire'
+apply plugin: "org.jlleitschuh.gradle.ktlint"
 
 description = "Kotlin Netty Medium"
 
@@ -7,13 +8,21 @@ configurations {
 }
 
 dependencies {
-    implementation libs.kotlin.coroutines.core
-    implementation libs.kotlin.kotlinSerialization
+    implementation libs.kotlin.coroutines_core
+    implementation libs.kotlin.serialization_json
     implementation libs.netty
     implementation libs.wire
+
+    implementation libs.slf4j
+
+    testImplementation libs.logback
+    testImplementation libs.kotest.junit5
+    testImplementation libs.kotest.assertions
+    testImplementation libs.kotest.property
+
+
     testImplementation libs.spock
-    testImplementation libs.junit
-    ktlint libs.ktlint
+
 }
 
 compileTestKotlin {
@@ -22,27 +31,11 @@ compileTestKotlin {
     targetCompatibility = JavaVersion.VERSION_1_8
 }
 
-task ktlint(type: JavaExec, group: "verification") {
-    description = "Check Kotlin code style."
-    classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
-    args "src/**/*.kt,!src/**/*KoneMessage.kt"
-}
-
-task ktlintFormat(type: JavaExec, group: "formatting") {
-    description = "Fix Kotlin code style deviations."
-    classpath += files("config/ktlint")
-    classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
-    args "-F", "src/**/*.kt"
-}
-
 detekt {
     input = files("src/main/kotlin")
     parallel = true
     ignoreFailures = true
-    config = files("config/detekt/yaml/detekt-config.yml")
-    filters = "**/*.Examples.kt,**/protobuf/*.KonemMessage.kt,**/*.WebSocketFrameHandler.kt"
+    config = files("config/detekt/detekt-config.yml")
     reports {
         html {
             enabled = true
@@ -53,8 +46,10 @@ detekt {
 }
 
 test {
-    jvmArgs = ["-Dio.netty.leakDetection.level=PARANOID","-Dkonem.secure.keyStoreLocation=config/keystore/konem.jks","-Dkonem.secure.keyStoreType=JKS","-Dkonem.secure.keyStorePassword=test123"]
+    jvmArgs = ["-Dio.netty.leakDetection.level=PARANOID","-Dkonem.secure.keyStoreLocation=config/keystore/konem.jks","-Dkonem.secure.keyStoreType=JKS","-Dkonem.secure.keyStorePassword=test123",
+    "--add-opens java.base/jdk.internal.misc=ALL-UNNAMED","-Dio.netty.tryReflectionSetAccessible=true","--illegal-access=warn"]
     systemProperties 'SKIP.LONG': '1'
+    useJUnitPlatform()
 }
 
 wire {
